[package]
name = "dust-devil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dust-devil-core = { path = "../dust-devil-core" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["full"]}
dashmap = "5"
