[package]
name = "dust-devil-sandstorm"
version = "1.0.0"
edition = "2021"
description = "A remote monitoring client for the dust-devil socks5 server."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dust-devil-core = { path = "../dust-devil-core", version = "1" }
tokio = { version = "1", features = ["rt", "net", "sync", "time", "signal", "macros"] }
time = { version = "0", features = ["local-offset"] }
crossterm = { version = "0" }
